src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Consumer__c</fullName>
        <label>Consumer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Driver__c</fullName>
        <label>Contact Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Update Account Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Product Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Discount Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Status Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation/Return Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Passport Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coupon_Amount__c</fullName>
        <label>Coupon Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Quantity__c</fullName>
        <label>Coupon Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Reaction_Status__c</fullName>
        <label>Current Reaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Intermittent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Action__c</fullName>
        <label>Customer Requested Action</label>
        <picklist>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None, consumer satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Further Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases as Customer</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_is_Consumer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer is Consumer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_is_Reporter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer is Reporter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Ended_Product__c</fullName>
        <label>Date Ended Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Reaction_Began__c</fullName>
        <label>Date Reaction Began</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Reaction_Ended__c</fullName>
        <label>Date Reaction Ended</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Started_Product__c</fullName>
        <label>Date Started Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Visited_HCP__c</fullName>
        <label>Date Visited HCP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_Consumer_Discontinue_the_Product__c</fullName>
        <label>Did Consumer Discontinue the Product?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_Consumer_Make_a_Demand__c</fullName>
        <label>Did Consumer Make a Demand?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_a_Consumer_prompt_your_web_case__c</fullName>
        <label>Did a Consumer prompt your web case?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_consumer_visit_a_HCP_for_this_event__c</fullName>
        <label>Did consumer visit a HCP for this event?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_consumer_visit_an_Emergency_Room__c</fullName>
        <label>Did consumer visit an Emergency Room?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <label>Escalated?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Complete_Date__c</fullName>
        <label>Final Approval Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Reviewer__c</fullName>
        <label>Final Approval Reviewer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Refund_Type__c</fullName>
        <label>Refund Type</label>
        <picklist>
            <controllingField>Case_Resolution__c</controllingField>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCP_Address__c</fullName>
        <label>HCP Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HCP_Contact_Info__c</fullName>
        <label>HCP Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HCP_Full_Name__c</fullName>
        <label>HCP Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Phone__c</fullName>
        <label>HCP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HCP_Type__c</fullName>
        <label>HCP Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_the_reaction_subsided__c</fullName>
        <label>Has the reaction subsided?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Address__c</fullName>
        <label>Hospital Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Much_Ingested_or_Applied__c</fullName>
        <label>How Much Ingested or Applied?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many__c</fullName>
        <label>Dose</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often__c</fullName>
        <label>Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICM_Number__c</fullName>
        <label>ICM Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Received__c</fullName>
        <label>Identification Received?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Identification_Sent__c</fullName>
        <label>Identification Sent?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>If_no_explain__c</fullName>
        <label>If no, explain</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_no_what_is_the_reaction_status__c</fullName>
        <label>If no, what is the reaction status?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_what_was_the_result__c</fullName>
        <label>If_yes_what_was_the_result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Department__c</fullName>
        <label>Intake Department</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>International_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation_Requested__c</fullName>
        <label>Investigation Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigation_Summary__c</fullName>
        <label>Investigation Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investigation_for_Consumer_Response__c</fullName>
        <label>Supervisor Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Known_Allergies_Picklist__c</fullName>
        <label>Known Allergies?</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Known_Allergies__c</fullName>
        <label>Known Allergies?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_History__c</fullName>
        <label>Medical History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nutrition_Review_Summary__c</fullName>
        <label>Nutrition_Review_Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_From__c</fullName>
        <label>Original From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Original_To__c</fullName>
        <label>Original To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Medications_OTCs_Dates_Used__c</fullName>
        <label>Other Medications/OTCs Dates Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Medications_OTCs_Dosage__c</fullName>
        <label>Other Medications/OTCs Dosage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Medications_OTCs_Indication__c</fullName>
        <label>Other Medications/OTCs Indication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Medications_OTCs_Name__c</fullName>
        <label>Other Medications/OTCs Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_medications_taken_at_same_time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did you take this product(s) with other medications, OTC or supplements at the same time?</description>
        <inlineHelpText>Did you take this product(s) with other medications, OTC or supplements at the same time?</inlineHelpText>
        <label>Other medications taken at same time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome_of_treatment__c</fullName>
        <label>Outcome of treatment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PQM_Consumer_Country__c</fullName>
        <label>PQM Consumer Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PQM_Number__c</fullName>
        <label>PQM Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQM_Reporter_Country__c</fullName>
        <label>PQM Reporter Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Point_of_Purchase__c</fullName>
        <label>Point of Purchase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregnant__c</fullName>
        <label>Pregnant?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prepaid_Label_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prepaid Label Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prepaid_Label_Sent_Date__c</fullName>
        <label>Prepaid Label Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prepaid_Label_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepaid Label Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Complaint_Refund_Type__c</fullName>
        <label>Refund Type</label>
        <picklist>
            <controllingField>Complaint_Resolution__c</controllingField>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Intended_For__c</fullName>
        <label>Product Intended For</label>
        <picklist>
            <picklistValues>
                <fullName>Human</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Quantity_Received_Long__c</fullName>
        <label>Product Quantity Received</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Quantity_Received_Text__c</fullName>
        <label>Product Quantity Received</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quantity_Received__c</fullName>
        <label>Product Quantity Received</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Received_Date__c</fullName>
        <label>Product Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_queue_Cisco_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-queue Cisco Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reaction_Status__c</fullName>
        <label>Reaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Intermittent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_or_SRP_Amount__c</fullName>
        <label>Receipt_or_SRP_Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Numner__c</fullName>
        <label>Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Notes__c</fullName>
        <label>Refund Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regulatory_Agency_Initiated__c</fullName>
        <label>Regulatory Agency Initiated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <inlineHelpText>Why is this case being rejected?</inlineHelpText>
        <label>Rejected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Order_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Case is the parent record for this Order Adjustment</description>
        <label>Related Order Adjustment</label>
        <referenceTo>Order_Adjustment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Order_Number__c</fullName>
        <description>when Order gets deleted on the Case, this field is used as a back field to store the order number</description>
        <label>Related Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Order</label>
        <referenceTo>Orders__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporter_Apt__c</fullName>
        <label>Reporter Apt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_City__c</fullName>
        <label>Reporter City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Country__c</fullName>
        <label>Reporter Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Email__c</fullName>
        <label>Reporter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporter_Name_del__c</fullName>
        <label>Reporter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Phone__c</fullName>
        <label>Reporter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reporter_Relationship_to_Consumer__c</fullName>
        <description>What is the Reporter&apos;s relationship to the Consumer?</description>
        <inlineHelpText>What is the Reporter&apos;s relationship to the Consumer?</inlineHelpText>
        <label>Reporter Relationship to Consumer</label>
        <picklist>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>